--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
       name="description"
       content="Matrix Admin Lite Free Version is powerful and clean admin dashboard template, inpired from Bootstrap Framework" />
     <meta name="robots" content="noindex,nofollow" />
-    <title>Matrix Admin Lite Free Versions Template by WrapPixel</title>
+    <title>Blog Api</title>
     <!-- Favicon icon -->
     <link
       rel="icon"
@@ -352,14 +352,8 @@
           <!-- Sidebar navigation-->
           <nav class="sidebar-nav">
             <ul id="sidebarnav" class="pt-4">
-        
-              <li class="sidebar-item">
-                <a
-                  class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/"
-                  aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span
-                    class="hide-menu">Dashboard</span></a>
-              </li>
+
+             
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
