--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -17,20 +17,20 @@
                 class="border shadow-lg p-3 mb-5 bg-body rounded mt-5"
                 method="post">
                 <h2 class="text-center">Change Password </h2>
-                
+
                 <div class="form-group mt-3">
                     <label>Password</label>
                     <input type="password" class="form-control mt-3"
                         placeholder="Password" name="password">
                 </div>
-               
+
                 <div class="form-group mt-3">
                     <label>confirm password</label>
                     <input type="password" class="form-control mt-3"
                         placeholder="Password" name="confirmpassword">
                 </div>
-                <input type="hidden" value="<%=emailid%>" >
-               
+                <input type="hidden" value="<%=emailid%>" name="emailid">
+
                 <button type="submit" class="btn btn-primary mt-3">Submit</button>
             </form>
 
