--- a/views/view_blog.ejs
+++ b/views/view_blog.ejs
@@ -1,55 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous">
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="container">
-            <table class="table  table-info table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">blog_image</th>
-                        <th scope="col">blog_title</th>
-                        <th scope="col">blog_description</th>
-                        <th scope="col">about_blog</th>
-                        <th scope="col">Delete</th>
-                        <th scope="col">update</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% data.forEach(item=> { %>
-                    <tr>
-
-                        <td><img src="/profile/<%= item.blog_image %>"
-                                style="width: 100px;"></td>
-                        <td><%=item.blog_title%></td>
-                        <td><%=item.blog_description%></td>
-                        <td><%=item.about_blog%></td>
-                        <td><form action="/delete/<%= item._id %>" method="post"
-                                onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                <button type="submit" class="btn btn-danger">Delete</button>
-                            </form></td>
-                        <td><a href="/update/<%= item._id %>"
-                                class="btn  btn-success">Update</a></td>
-                    </tr>
-                    <% }) %>
-
-                </tbody>
-            </table>
-        </div>
-    </body>
-</html> -->
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
   <head>
@@ -64,7 +12,7 @@
       name="description"
       content="Matrix Admin Lite Free Version is powerful and clean admin dashboard template, inpired from Bootstrap Framework" />
     <meta name="robots" content="noindex,nofollow" />
-    <title>Matrix Admin Lite Free Versions Template by WrapPixel</title>
+    <title>Blog Api</title>
     <!-- Favicon icon -->
     <link
       rel="icon"
@@ -405,17 +353,11 @@
           <nav class="sidebar-nav">
             <ul id="sidebarnav" class="pt-4">
         
+            
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
                   href="/"
-                  aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span
-                    class="hide-menu">Dashboard</span></a>
-              </li>
-              <li class="sidebar-item">
-                <a
-                  class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/blog_add"
                   aria-expanded="false"><i class="mdi mdi-chart-bar"></i><span
                     class="hide-menu">Blog_Add</span></a>
               </li>
@@ -478,10 +420,10 @@
         </div>
         <!-- footer -->
         <!-- ============================================================== -->
-        <footer class="footer text-center">
+        <!-- <footer class="footer text-center">
           All Rights Reserved by Matrix-admin. Designed and Developed by
           <a href="https://www.wrappixel.com">WrapPixel</a>.
-        </footer>
+        </footer> -->
         <!-- ============================================================== -->
         <!-- End footer -->
         <!-- ============================================================== -->
